--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertical Timeline</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
-    
+   
+    <div>
+        <h2 class="title1"><span>Title</span></h2>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. A earum neque nobis quis officia aliquam distinctio non soluta maxime, accusantium, provident molestiae voluptates nulla, delectus veniam quae animi quisquam debitis.
+    </p>
+    </div>
+
+    <h2 class="card-title">Card Title</h2>
+    <div>
+    <p> 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vel, debitis quaerat delectus labore dolor, placeat ex sequi quos corrupti saepe odit, iure sit? Optio nulla impedit nisi cumque perferendis?
+    </p>
+    </div>
+
+    <h2 class="quote">Quote</h2>
+    <div>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, exercitationem porro nesciunt, eos nihil ullam mollitia doloribus sequi atque at eveniet corporis cupiditate dolor qui sit quos eligendi cum aperiam.
+    </p>
+    </div>
+
 </body>
 </html>
