--- a/index.html
+++ b/index.html
@@ -9,26 +9,37 @@
     <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
+   <div class="timeline">
+    <div class="info">
+        <div class="leftside">
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium at tempora suscipit rerum, quae sint, repellendus minus ipsum, deleniti rem doloremque excepturi. 
+                Obcaecati minus dolorem nisi sit aut at facere!</p>
+                <button class="more" type="button">More</button>
+        </div>
+     </div>
+
+     <div class="right">
+        <div class="info">
+            <h2>Card Title</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem saepe magnam libero doloremque inventore ipsum excepturi quidem facilis quaerat, porro voluptatem? 
+                Cupiditate illo quos in, eum odio eaque culpa nostrum!</p>
+                <button class="more" type="button">More</button>
+        </div>
+     </div>
+
+     <div class="left">
+        <div class="info">
+            <h2>Quote</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam facilis magni cum. 
+                Et reiciendis, distinctio molestias, delectus rerum asperiores commodi sed non voluptas expedita facere cupiditate sequi eos, corporis cumque?</p>
+        </div>
+     </div>
+
+
    
-    <div>
-        <h2 class="title1"><span>Title</span></h2>
-    <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. A earum neque nobis quis officia aliquam distinctio non soluta maxime, accusantium, provident molestiae voluptates nulla, delectus veniam quae animi quisquam debitis.
-    </p>
-    </div>
 
-    <h2 class="card-title">Card Title</h2>
-    <div>
-    <p> 
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque vel, debitis quaerat delectus labore dolor, placeat ex sequi quos corrupti saepe odit, iure sit? Optio nulla impedit nisi cumque perferendis?
-    </p>
-    </div>
-
-    <h2 class="quote">Quote</h2>
-    <div>
-    <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, exercitationem porro nesciunt, eos nihil ullam mollitia doloribus sequi atque at eveniet corporis cupiditate dolor qui sit quos eligendi cum aperiam.
-    </p>
+    
     </div>
 
 </body>
