Wrapped text in container added line in middle

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
    <div class="timeline">
-    <div class="info">
-        <div class="leftside">
+    <div class="leftside">
+        <div class="info">
+            
             <h2>Title</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium at tempora suscipit rerum, quae sint, repellendus minus ipsum, deleniti rem doloremque excepturi. 
                 Obcaecati minus dolorem nisi sit aut at facere!</p>
@@ -19,7 +20,7 @@
         </div>
      </div>
 
-     <div class="right">
+     <div class="rightside">
         <div class="info">
             <h2>Card Title</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem saepe magnam libero doloremque inventore ipsum excepturi quidem facilis quaerat, porro voluptatem? 
@@ -28,14 +29,14 @@
         </div>
      </div>
 
-     <div class="left">
+     <div class="leftside"> 
         <div class="info">
             <h2>Quote</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam facilis magni cum. 
                 Et reiciendis, distinctio molestias, delectus rerum asperiores commodi sed non voluptas expedita facere cupiditate sequi eos, corporis cumque?</p>
         </div>
      </div>
-
+    
 
    
 
