Points in line and moved a container to one side

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="timeline">
-    <div class="leftside">
+    <div class="container left">
         <div class="info">
             
             <h2>Title</h2>
@@ -20,7 +20,7 @@
         </div>
      </div>
 
-     <div class="rightside">
+     <div class="container right">
         <div class="info">
             <h2>Card Title</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem saepe magnam libero doloremque inventore ipsum excepturi quidem facilis quaerat, porro voluptatem? 
@@ -29,7 +29,7 @@
         </div>
      </div>
 
-     <div class="leftside"> 
+     <div class="container left"> 
         <div class="info">
             <h2>Quote</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam facilis magni cum. 
