Font pencils added w background

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertical Timeline</title>
+    <script src="https://kit.fontawesome.com/0e690b000a.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="normalize.css">
 </head>
@@ -51,6 +52,18 @@
             
 
         </ul>
+
+        <div class="pencil1">
+        <i class="fa-solid fa-pencil"></i>
+        </div>
+
+        <div class="pencil2">
+            <i class="fa-solid fa-pencil"></i>
+        </div>
+
+        <div class="pencil3">
+        <i class="fa-solid fa-pencil"></i>
+        </div>
     </main>
 
 </body>
