added media query

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li class="timeline-event">
                 <h2 class="right-card">Card Title</h2>
                 <p class="right-info" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eligendi consequuntur velit nihil laboriosam cupiditate sed fugit tenetur et ut. 
-                    Cum est commodi sed reiciendis autem? Necessitatibus laborum odit quas?</p>
+                    Cum est commodi sed reiciendis autem? </p>
                     <button class="rightbtn" type="button">More</button>
                     <div class="current-date2">
                         <script>
